--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -47,10 +47,10 @@
 		border2-bg:			rgba(144,144,144,0.5),
 
 		accent1: (
-			bg:				#21b2a6,
+			bg:				#9867c5, //a1045a
 			fg-bold:		#ffffff,
-			fg:				mix(#21b2a6, #ffffff, 25%),
-			fg-light:		mix(#21b2a6, #ffffff, 40%),
+			fg:				mix(#9867c5, #ffffff, 25%),
+			fg-light:		mix(#9867c5, #ffffff, 40%),
 			border:			rgba(0,0,0,0.125),
 			border-bg:		rgba(255,255,255,0.075),
 			border2:		rgba(0,0,0,0.25),
@@ -58,7 +58,7 @@
 		),
 
 		accent2: (
-			bg:				#00ffcc,
+			bg:				#e7ff37,
 			fg-bold:		#ffffff,
 			fg:				mix(#00ffcc, #ffffff, 25%),
 			fg-light:		mix(#00ffcc, #ffffff, 40%),
@@ -91,10 +91,10 @@
 		),
 
 		accent5: (
-			bg:				#505393,
+			bg:				#9867c5, //a1045a
 			fg-bold:		#ffffff,
-			fg:				mix(#505393, #ffffff, 25%),
-			fg-light:		mix(#505393, #ffffff, 40%),
+			fg:				mix(#4c0121, #ffffff, 25%),
+			fg-light:		mix(#4c0121, #ffffff, 40%),
 			border:			rgba(0,0,0,0.125),
 			border-bg:		rgba(255,255,255,0.075),
 			border2:		rgba(0,0,0,0.25),
@@ -102,7 +102,7 @@
 		),
 
 		accent6: (
-			bg:				#ed4933,
+			bg:				#63c5da,
 			fg-bold:		#ffffff,
 			fg:				mix(#ed4933, #ffffff, 25%),
 			fg-light:		mix(#ed4933, #ffffff, 40%),
